--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <body>
     Hello, world.<br><br>
-    <a href="human.txt">Check out human.txt</a>
+    <a href="human.txt">Check out human.txt</a><br>
+    <a href="https://github.com/muan/hello-world">Contribute</a>
   </body>
 </html>
