--- a/justyn-clark.html
+++ b/justyn-clark.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<title>Hello, world. | Justyn Clark</title>
 <style>
 body {padding: 15%; text-align: center; background-color: #e4e4e4; line-height: 1.6em; margin: 0 auto;}
 p {font-family: sans-serif; font-weight: normal;}
