update html file

--- a/linlinlinlin.html
+++ b/linlinlinlin.html
@@ -1,1 +1,19 @@
-This is test.
+<html>
+  <head>
+    <title>Hello, world.</title>
+    
+    <style>
+      body {
+        font-family: courier, monospace;
+        padding: 10% 15px;
+        text-align: center;
+        font-size: 13px;
+        line-height: 1.65em;
+      }
+    </style>
+  </head>
+
+  <body>
+    Hi, this is linlinlinlin.html.<br><br>
+  </body>
+</html>
