--- a/jhoebuzz.html
+++ b/jhoebuzz.html
@@ -5,7 +5,8 @@
     <title>JhoeBuzz</title>
   </head>
   <body>
-    <h1>Hello! World</h1>
+    <h1>Hello! World.</h1>
+    <h2>I'm Jhoebuzz.I like octocat.</h2>
     <p>
       Hello! muan
     </p>
