--- a/monte.html
+++ b/monte.html
@@ -1,2 +1,22 @@
-Hello world!
-Check out my website: http://www.monte9.github.com
+<html>
+  <head>
+    <title>Hello, world.</title>
+
+    <style>
+      body {
+        font-family: courier, monospace;
+        padding: 10% 15px;
+        text-align: center;
+        font-size: 13px;
+        line-height: 1.65em;
+      }
+    </style>
+  </head>
+
+  <body>
+    My name is Monte Thakkar!<br><br>
+    <a href="http://www.monte9.github.com">Check out my website.</a><br>
+    🔥🔥🔥🔥🔥🔥
+  </body>
+</html>
+
