updated website URL & github username in human.txt

--- a/monte.html
+++ b/monte.html
@@ -15,7 +15,7 @@
 
   <body>
     My name is Monte Thakkar!<br><br>
-    <a href="http://www.monte9.github.com">Check out my website.</a><br>
+    <a href="http://monte9.github.io/">Check out my website.</a><br>
     🔥🔥🔥🔥🔥🔥
   </body>
 </html>
