--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           const a = document.createElement('a')
           a.href = 'https://github.com/' + login
           const image = new Image(30, 30)
-          image.src = 'https://github.com/' + login + '.png'
+          image.src = 'https://github.com/' + login + '.png?size=30'
           a.appendChild(image)
           document.body.appendChild(a)
 
