Add Username to human.txt

--- a/ShreyaPrabhu.html
+++ b/ShreyaPrabhu.html
@@ -46,18 +46,18 @@ body {
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="bootstrap.html">SHARE IT</a>
+      <a class="navbar-brand" href="#">SHARE IT</a>
     </div>
     <div>
       <ul class="nav navbar-nav">
-        <li class="active"><a href="bootstrap.html">Home</a></li>
+        <li class="active"><a href="#">Home</a></li>
         <li><a href="#">Page 1</a></li>
         <li><a href="#">Page 2</a></li>
-        <li><a href="faq.html">FAQ's</a></li>
+        <li><a href="#">FAQ's</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-        <li><a href="signin.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
