modified opening tag

--- a/JeffChern.html
+++ b/JeffChern.html
@@ -1,4 +1,5 @@
 <html>
+  <head>
     <title>Hi</title>
     <meta charset="utf-8">
     <style>
@@ -11,10 +12,9 @@
       }
     </style>
   </head>
-
   <body>
     Hi there, I'm Jeff from Taiwan.<br>
-    I will begin my master degree in Santa Clara University this fall.<br>	
-    <a href="http://jeffchen.com.tw/</a><br>
+    I will begin my master degree in Santa Clara University this fall.<br>
+    <a href="http://jeffchen.com.tw"> </a>
   </body>
 </html>
