prefix link with http://

--- a/pipmonkey.html
+++ b/pipmonkey.html
@@ -6,7 +6,7 @@
   <body>
     <h1>About</h1>
     <p>Call me <em>pipmonkey</em>, brah.</p>
-    <a href="www.google.com">Go to the google homepage</a>
+    <a href="http://www.google.com">Go to the google homepage</a>
 
   </body>
 </html>
