created link to my github

--- a/pmayur.html
+++ b/pmayur.html
@@ -25,7 +25,7 @@
 <body>
 	<h1 class = "head">Hello World !</h1>
     <h3>you can get me at</h3>
-    <h2 class = "head2">github: <a href = "www.github.com/pmayur">pmayur</a></h2>
+    <h2 class = "head2">github: <a href = "https://github.com/pmayur">pmayur</a></h2>
     
 </body>
 
