--- a/humans/Leo-Mu.html
+++ b/humans/Leo-Mu.html
@@ -508,6 +508,7 @@ nav ul li {
     </a>
     <nav>
       <ul>
+        <li><a href="../index.html">HOME</a></li>
       </ul>
     </nav>
   </header>
@@ -525,6 +526,7 @@ nav ul li {
   </section>
   
   <!-- Copyrights Section -->
+  <div class="copyright">&copy;2017 - <strong>穆鸿翔</strong></div>
 </div>
 <!-- Main Container Ends -->
 </body>
