--- a/humans/TwilightMoon.html
+++ b/humans/TwilightMoon.html
@@ -5,13 +5,13 @@
 </head>
 <body>
 <style>
-  a {
+  A {
     text-decoration: none;
-    color: 	#bf4040;
+    color: red;
   }
-  a:hover {
+  A:hover {
     text-decoration: none;
-    color: #bf4040;
+    color: red;
   }
   h3 {
     text-align: center;
