--- a/humans/TwilightMoon.html
+++ b/humans/TwilightMoon.html
@@ -3,16 +3,8 @@
 <head>
 <meta charset="utf-8">
 </head>
-<body>
+<body link="red" vlink="red" alink="red">
 <style>
-  A {
-    text-decoration: none;
-    color: red;
-  }
-  A:hover {
-    text-decoration: none;
-    color: red;
-  }
   h3 {
     text-align: center;
   }
@@ -25,6 +17,6 @@
   <h3>Hello! I am TwilightMoon.</h3>
   <p>My Real name is Igor. I am like programming.</p>
   <p>I am programming on Javascript, and Java. like html.</p>
-  <p>I am beginner on github, <a href="github.com/TwilightMoon/">This is my profile 😊.</a> </p>
+  <p>I am beginner on github, <a href="https://github.com/TwilightMoon/" target="_blank">This is my profile</a> 😊.</p>
 </body>
 </html>
