--- a/humans/TwilightMoon.html
+++ b/humans/TwilightMoon.html
@@ -15,8 +15,8 @@
   }
   </style>
   <h3>Hello! I am TwilightMoon.</h3>
-  <p>My Real name is Igor. I am like programming.</p>
+  <p>My Real name is Igor. I like programming.</p>
   <p>I am programming on Javascript, and Java. like html.</p>
-  <p>I am beginner on github, <a href="https://github.com/TwilightMoon/" target="_blank">This is my profile</a> 😊.</p>
+  <p><a href="https://github.com/TwilightMoon/" target="_blank">This is my profile</a> 😊.</p>
 </body>
 </html>
