--- a/humans/TwilightMoon.html
+++ b/humans/TwilightMoon.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
+<title>Hello!</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body link="red" vlink="red" alink="red">
 <style>
@@ -18,5 +20,6 @@
   <p>My Real name is Igor. I like programming.</p>
   <p>I am programming on Javascript, and Java. like html.</p>
   <p><a href="https://github.com/TwilightMoon/" target="_blank">This is my profile</a> 😊.</p>
+  <p>If you want, you can follow me.</p>
 </body>
 </html>
