--- a/humans/ArkTrevelyan.html
+++ b/humans/ArkTrevelyan.html
@@ -6,7 +6,10 @@
 	
 	<BODY>
 		<P>
-			I am the insignificant nibble on the almighty servers of GitHub!
+			<strong>I am the insignificant nibble on the almighty servers of GitHub!</strong>
+		</P>
+		<P>
+			Java - 3 years; HTML - 2 years; C - 8 months; x64 NASM - 12 days; English - whole life; Japanese - 6 months.
 		</P>
 	</BODY>
 </HTML
