Added a file named as devophile and edited the human.txt file

--- a/humans/devophile.html
+++ b/humans/devophile.html
@@ -1,4 +1,13 @@
-Hello  there!
-This is my first commit on git cli.
-Its really exciting to be here
-Thank you! :)
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Commit</title>
+  </head>
+  <body>
+    Hello  there!
+    This is my first commit on git cli.
+    Its really exciting to be here
+    Thank you! :)
+  </body>
+</html>
