Added something funny on my profile! :P

--- a/humans/devophile.html
+++ b/humans/devophile.html
@@ -9,5 +9,22 @@
     This is my first commit on git cli.
     Its really exciting to be here
     Thank you! :)
+    <br>
+    <strong>Thanks for visiting! Here's a joke for you :P</strong><br>
+    BF: Baby are you jealous?
+
+GF: No.
+
+BF: Baby are you jealous?
+
+GF: No.
+
+BF: Baby are you jealous?
+
+GF: I already told you, No!
+
+BF: Baby can I get a kiss?
+
+GF: GO GET A KISS FROM THAT UGLY GIRL THAT LIKED YOUR STATUS ON FACEBOOK! 
   </body>
 </html>
