--- a/humans/erctrn.html
+++ b/humans/erctrn.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello, world!</h1>
 <p>Hi everyone, my name is Eric.</p>
-<p> It's almost time for Halloween! 👻 </p>
+<p><a href="https://github.com/Erctrn/" target="_blank">This is my profile.</a></p>
+<p>It's almost time for Halloween! 👻 </p>  
 </body>
 </html>
