Adding Carrie to humans

--- a/humans/carriesnow.html
+++ b/humans/carriesnow.html
@@ -1,13 +1,6 @@
-<!doctype html>
-<html lang="en">
-    <head>
-        <title>Carrie Snow | Web and Visual Designer</title>
-        
-    </head>
-	<body>    
-                    <a href="http://carriesnowdesigns.com"> <img src="img/carriesnow1000.png" id="logo" alt="Carrie Snow Logo"/></a>
-				</div>
-	 
-    
-    </body>
+<!DOCTYPE html>
+<html>
+<body>
+<h2>Hiya! I'm Carrie in Portland, OR. Learning all things design and coding. </h2>
+</body>
 </html>
