wanted to use concept of branching

--- a/humans/blackphoenix42.html
+++ b/humans/blackphoenix42.html
@@ -6,7 +6,7 @@
     <title>blacphoenix</title>
   </head>
   <body>
-    <h1>Hellllooooooo guys, I am Ayush.</h1>
+    <h1>Helllloooooooooooo guys, I am Ayush.</h1>
     <h2>Sending Love From INDIA &lt;3</h2>
   </body>
 </html>
