--- a/humans/leschllr.html
+++ b/humans/leschllr.html
@@ -1,1 +1,10 @@
-Hi, this is leschllr.html.
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Hello everybody!</title>
+  </head>
+  <body>
+    <p>Nice to meet you. This is leschllr.</p>
+  </body>
+</html>
